# cw7

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py
habits/: paginations.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
users/: apps.py  urls.py  views.py
users/management/commands/: runbot.py
users/migrations/: 0001_initial.py
